--- a/course1/csscheatsheet/index.html
+++ b/course1/csscheatsheet/index.html
@@ -115,8 +115,32 @@
           suscipit provident ut nihil?
         </p>
       </div>
+
+      <div class="clr"></div>
+
+      <div class="p-box">
+        <h1>Hello</h1>
+        <h2>Goodbye</h2>
+      </div>
+
+      <ul class="my-list">
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+        <li>List Item</li>
+      </ul>
     </div>
     <!-- container ends -->
+
+    <a class="fix-me button" href="">Hello</a>
 
     <div style="margin-top: 500px"></div>
   </body>
